[project]
name = "pyorbslam"
version = "0.0.1"
description = "pyorbslam: SLAM based on ORB-SLAM3 in C++"
authors = [
    {name = "Eduardo Davalos", email="eduardo.davalos.anaya@vanderbilt.edu"},
]
license = {file = "LICENSE.txt"}
readme = "README.md"
requires-python = ">3.6"

keywords = ["slam", "real-time", "3d", "camera"]

classifiers = [
    "Programming Language :: Python :: 3"
]

dependencies = [
    "numpy",
    "tqdm",
    "PyYAML",
    "opencv-python",
    "Pillow",
    "PyOpenGL",
    "plyfile",
    "pyqtgraph",
    "PyQt5"
]

[project.optional-dependencies]
test = [
    'pytest',
    'pytest-lazy-fixture',
    'pytest-rerunfailures',
    'pytest-timeout',
]
docs = [
    'sphinx',
]

[project.urls]
homepath = "https://github.com/edavalosanaya/pyorbslam"
documentation = "https://edavalosanaya.github.io/pyorbslam/"
repository = "https://github.com/edavalosanaya/pyorbslam"

[build-system]
requires = ["py-build-cmake~=0.1.8"]
build-backend = "py_build_cmake.build"

[tool.py-build-cmake.module]
name = "pyorbslam"
directory = "python-src"

[tool.py-build-cmake.sdist]
include = ["src/*"]

[tool.py-build-cmake.cmake]
minimum_version = "3.15"
build_type = "Release"
source_path = "src"
build_args = ["-j3"]
install_components = ['python_modules']
install_args = ['--verbose']

# Reference:
# https://stackoverflow.com/questions/4673373/logging-within-pytest-tests
[tool.pytest.ini_options]

# Logging + CLI
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s.%(msecs)03d [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

# Timeout
faulthandler_timeout=300

# Ignore warnings
filterwarnings = "ignore::DeprecationWarning"
